src/test/resources/scripts/language/parser/valid/casts/castTuple.sbsc
// test making a tuple from casted values.

a = 1.2;

b = 3.4;

c = 4;

d = (int(a), int(b), num(c));

test = (e: int, f: int, g: num): int -> {
    return e + f + int(g);
};

println(str(test(d)));

return true;